--- a/templates/events.html
+++ b/templates/events.html
@@ -33,6 +33,7 @@
         <button type="submit" class="btn btn-primary">Buscar</button>
       </div>
     </form>
+  </div>
     <div class="table-responsive data-editable" style="border-radius: 10px; overflow: hidden;">
       <table id="eventsTable" class="table table-hover ">
         <thead style="vertical-align: middle;">
@@ -68,7 +69,7 @@
   </div>
 </section>
 
-<!--Create Membership Modal-->
+<!--Create Event Modal-->
 <div class="modal fade" id="createNewEvent" tabindex="-1" aria-labelledby="createNewEventLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-md">
     <div class="modal-content">
