--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>C.A.S Manager: {% block title %}{% endblock %}</title>
+  <title>{% block title %} C.A.S Manager: {% endblock %}</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
