--- a/templates/events.html
+++ b/templates/events.html
@@ -24,50 +24,78 @@
   </div>
     
   
-<section class="section dashboard">
+  <section class="section dashboard">
 
-  <div class="col-lg-12">
-    <form action="{{ url_for('events') }}" method="GET" class="mb-3">
-      <div class="input-group">
-        <input type="text" name="query" class="form-control" placeholder="Buscar evento por nombre" value="{{query}}">
-        <button type="submit" class="btn btn-primary">Buscar</button>
-      </div>
-    </form>
-  </div>
-    <div class="table-responsive data-editable" style="border-radius: 10px; overflow: hidden;">
-      <table id="eventsTable" class="table table-hover ">
-        <thead style="vertical-align: middle;">
-          <tr>
-            <th scope="col">Nombre</th>
-            <th scope="col">Fecha</th>
-            <th scope="col">Lugar</th>
-            <th scope="col">Precio tarjeta</th>
-            <th scope="col"></th> <!-- New column for buttons -->
+    <!--Search bar -->
+    <div class="col-lg-12">
+      <form action="{{ url_for('events') }}" method="GET" class="mb-3">
+        <div class="input-group">
+          <input type="text" name="query" class="form-control" placeholder="Buscar evento por nombre" value="{{query}}">
+          <button type="submit" class="btn btn-primary">Buscar</button>
+        </div>
+      </form>
+    </div>
   
-          </tr>
-        </thead>
-        <tbody style="vertical-align: middle;" >
-          {% for event in events %}
-          <tr data-row-id="{{ event['id'] }}">
-            <td >{{ event['name'] }}</td>
-            <td > {{ event['date'] }}</td>
-            <td> {{ event['place'] }}</td>
-            <td> ${{ event['card_price'] }}</td>       
-            <td style="padding-top: 10px;"> <!-- Actions column -->
-              <form action="/delete_event/{{ event['id'] }}" method="post" style="display: inline-block;">
-                  <button type="submit" class="btn btn-outline-danger btn-sm" style="background-color: transparent;  vertical-align: middle;" onclick="return confirm('Una vez borrado no se podrán recuperar los datos del evento. ¿Desea borrarlo sabiendo esto?')">
-                      <i class="bi bi-trash" style="font-size: 1.1em; color: red;"></i> <!-- Delete icon -->
-                  </button> <!-- Delete button -->
-              </form>
-          </td>
-        </tr>
-          {% endfor %}
-        </tbody>
-      </table>
+    <div class="row">
+      <div class="accordion" id="sectionsAccordion">
+        <!-- Section Accordion -->
+        {% for grade in grades %}
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="accordionHeader{{ loop.index }}">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ loop.index }}" aria-expanded="true" aria-controls="collapse{{ loop.index }}">
+              Curso {{ grade['name'] }}
+            </button>
+          </h2>
+          <div id="collapse{{ loop.index }}" class="accordion-collapse collapse show" aria-labelledby="accordionHeader{{ loop.index }}" data-bs-parent="#sectionsAccordion">
+            <div class="accordion-body p-3">
+              <div class="row gy-3">
+                <!-- Left side columns -->
+                <div class="col-lg-8">
+                  <div class="row">
+                    <!--Tables-->
+                    <div class="table-responsive data-editable" style="border-radius: 10px; overflow: hidden;">
+                      <table id="editableTable{{ loop.index }}" class="table table-hover">
+                        <caption>{{ grade['name'] }}</caption>
+                        <thead style="vertical-align: middle;">
+                          <tr>
+                            <th scope="col">Nombre egresado</th>
+                            <th scope="col">Invitados</th>
+                            <th scope="col">Colocados</th>
+                            <th scope="col">Veg</th>
+                            <th scope="col">Cel</th>
+                            <th scope="col">Entregadas</th>
+                            <th scope="col">Cobradas</th>
+                            <th scope="col">Mesa N°</th>
+                          </tr>
+                        </thead>
+                      </table>
+                    </div>
+                  </div><!-- End Row -->
+                </div><!-- End Left side columns -->
+                <!-- Right side columns -->
+                <div class="col-lg-4">
+                  <div class="table-responsive data-editable" style="border-radius: 10px; overflow: hidden;">
+                    <table id="editableTable2{{ loop.index }}" class="table table-hover">
+                      <caption>Mesas</caption>
+                      <thead style="vertical-align: middle;">
+                        <tr>
+                          <th scope="col">Mesa N°</th>
+                        </tr>
+                      </thead>
+                    </table>
+                  </div>
+                </div><!-- End Right side columns -->
+              </div>
+            </div><!-- End Accordion Body -->
+          </div><!-- End Accordion Collapse -->
+        </div><!-- End Accordion Item -->
+        {% endfor %}
+      </div><!-- End Accordion -->
+    </div><!-- End row -->
+  </div><!-- End accordion -->
   
-    
-  </div>
-</section>
+  </section><!-- End section -->
+  
 
 <!--Create Event Modal-->
 <div class="modal fade" id="createNewEvent" tabindex="-1" aria-labelledby="createNewEventLabel" aria-hidden="true">
