--- a/static/css/style.css
+++ b/static/css/style.css
@@ -813,6 +813,12 @@ h6 {
   cursor:pointer;
 }
 
+.table-container {
+  position: sticky;
+  top: 70px;
+  z-index: 1000; /* Puedes ajustar el valor según sea necesario */
+}
+
 
 /* Top Selling */
 .dashboard .top-selling {
